@@ -1,3 +1,4 @@
+* Use model singleton to define which party sequence to use
 * Improve search_rec_name of category to take care of separator
 
 Version 1.4.0 - 2009-10-19
